# commissaire

./: .gitignore  FCI_ElencoDS.ipynb  README.md  pyproject.toml
regulations/: 2023_NATT_ESAL.md  2023_PUIS.md  2023_UCI_PISTA.md  CASISTICA.md  NATT_ESAL.md  NATT_JUUN.md  RTAA.md  UCI_I_IT.md
regulations/md/: 2023_NATT_JUUN.md
regulations/old/: 2023_NATT_JUUN.md
resources/: style.css
scripts/: FCI_ElencoDS.ipynb  FCI_Iscritti_1.14.ipynb  FCI_Iscritti_1.19.ipynb  FCI_Iscritti_Giovanili.ipynb  FCI_Iscritti_GiovaniliESAL.ipynb  FCI_template_race.ipynb
scripts/2023_campionati/: blank.ipynb
scripts/utils/: mypdfutils.py
tests/: NAZ.py  QUESTIONS.json
track/: README.md  iscritti.py  track.py
